code refactoring and sonarlint changes